--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ h1{
 	background: rgb(56,49,88);
 	font-family: comic;
 	text-align: center;
-	color: white;
+	color: rgb(255,255,255);
     
 }
 h2{
